--- a/css/all.css
+++ b/css/all.css
@@ -60,22 +60,20 @@ table {
           box-sizing: border-box;
 }
 
+*, *::before, *::after {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 body {
   font-family: "Noto Sans TC", sans-serif;
   color: #fff;
   line-height: 1.5;
   background: #000;
-  max-width: 1440px;
-  margin: 0 auto;
-}
-@media (max-width: 675px) {
-  body {
-    padding: 0 12px 0 12px;
-  }
 }
 
 a {
-  display: inline-block;
+  display: block;
   color: #fff;
   text-decoration: none;
 }
@@ -146,6 +144,16 @@ img {
   color: #919191;
 }
 
+.wrap {
+  max-width: 1296px;
+  margin: 0 auto;
+}
+@media (max-width: 675px) {
+  .wrap {
+    padding: 0 12px 0 12px;
+  }
+}
+
 .header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -164,7 +172,11 @@ img {
 h1 img {
   display: block;
   max-width: 245px;
-  height: 40px;
+}
+@media (max-width: 675px) {
+  h1 img {
+    max-width: 147px;
+  }
 }
 
 .header-list {
@@ -173,7 +185,12 @@ h1 img {
   display: flex;
 }
 .header-list a {
+  display: inline;
   margin-left: 20px;
+}
+.header-list a:hover {
+  padding: 0 0 10px 0;
+  border-bottom: 2px solid #fff;
 }
 @media (max-width: 675px) {
   .header-list {
@@ -201,14 +218,17 @@ h1 img {
 
 .btn {
   margin-top: 40px;
+  width: 170px;
   padding: 20px 40px 20px 40px;
   border: 1px solid #fff;
   border-radius: 16px;
 }
+.btn:hover {
+  color: #000;
+  background: #fff;
+}
 
 .animation-img {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
@@ -299,16 +319,14 @@ h1 img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  overflow-x: auto;
+  overflow-x: scroll;
   position: relative;
-}
-.cooperate-list li {
-  margin-left: 20px;
 }
 .cooperate-list img {
   width: 160px;
   height: 40px;
   max-width: initial;
+  margin-left: 20px;
 }
 
 /* 隱藏 x 軸 */
@@ -319,10 +337,8 @@ h1 img {
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .cooperate-list {
-  -ms-overflow-style: none;
-  /* IE and Edge */
-  scrollbar-width: none;
-  /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 .cooperate-list::after,
@@ -381,12 +397,13 @@ h1 img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding-left: 40px;
+  padding: 40px;
+  width: 416px;
   background: rgba(255, 255, 255, 0.08);
 }
 
 .comment {
-  margin: 76px 0 30px 0;
+  margin: 22px 0 30px 0;
 }
 
 .person {
@@ -412,17 +429,7 @@ h1 img {
   }
 }
 
-.container {
-  background: #FFF;
-  border-radius: 160px;
-}
-@media (max-width: 675px) {
-  .container {
-    border-radius: 20px;
-  }
-}
-
-.container {
+.content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -431,18 +438,21 @@ h1 img {
       -ms-flex-direction: column;
           flex-direction: column;
   padding: 160px 100px 160px 100px;
+  background: #FFF;
+  border-radius: 160px;
 }
 @media (max-width: 675px) {
-  .container {
+  .content {
     padding: 80px 12px 80px 12px;
+    border-radius: 20px;
   }
 }
 
-.container-title {
+.content-title {
   text-align: center;
 }
 @media (max-width: 675px) {
-  .container-title {
+  .content-title {
     font-size: 32px;
     line-height: 1.2;
   }
@@ -460,6 +470,11 @@ h1 img {
   }
 }
 
+.search-font {
+  border: none;
+  background: none;
+}
+
 .bar {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -467,6 +482,9 @@ h1 img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 @media (max-width: 675px) {
   .bar {
@@ -538,9 +556,6 @@ h1 img {
 }
 
 .card {
-  margin: 12px;
-  height: 558px;
-  max-width: 416px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -548,11 +563,15 @@ h1 img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  margin: 12px 6px 12px 6px;
+  width: 350px;
+  height: 558px;
   border: 1px solid #f2f2f2;
   border-radius: 16px;
 }
 
 .card-img {
+  width: 100%;
   overflow: hidden;
   border-radius: 16px 16px 0 0;
 }
@@ -564,10 +583,13 @@ h1 img {
 }
 
 .card-body {
+  padding: 20px 32px 20px 32px;
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
-  padding: 20px 32px;
+}
+.card-body h5 {
+  margin-bottom: 12px;
 }
 
 .list {
@@ -580,21 +602,22 @@ h1 img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 20px 32px 20px 32px;
   height: 64px;
+  padding: 20px 32px 20px 32px;
   border-top: 1px solid #f2f2f2;
 }
 
 .page-num {
-  margin: 40px 0 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 .page-num a {
   display: block;
-  padding: 20px 25px 20px 25px;
-  margin-left: 4px;
+  padding: 15px 20px 15px 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -633,6 +656,9 @@ h1 img {
       -ms-flex-align: center;
           align-items: center;
 }
+.serve-btn a {
+  width: 190px;
+}
 
 .footer-body {
   display: -webkit-box;
@@ -645,6 +671,11 @@ h1 img {
   padding: 80px 0 80px 0;
   border-top: 1px solid #fff;
 }
+.footer-body img {
+  display: block;
+  max-width: 245px;
+  height: 40px;
+}
 @media (max-width: 675px) {
   .footer-body {
     -ms-flex-wrap: wrap;
@@ -654,7 +685,7 @@ h1 img {
         -ms-flex-direction: column;
             flex-direction: column;
   }
-  .footer-body h1 {
+  .footer-body a {
     -webkit-box-ordinal-group: 0;
         -ms-flex-order: -1;
             order: -1;
@@ -690,7 +721,12 @@ h1 img {
   margin-left: 100px;
 }
 .community a {
+  display: inline;
   margin-right: 20px;
+}
+.community a:hover {
+  padding: 0 0 10px 0;
+  border-bottom: 2px solid #fff;
 }
 @media (max-width: 675px) {
   .community {
