--- a/css/all.css
+++ b/css/all.css
@@ -442,6 +442,9 @@ h1 img {
   display: flex;
   justify-content: center;
 }
+.bar-list a {
+  white-space: nowrap;
+}
 @media (max-width: 675px) {
   .bar-list {
     margin-top: 16px;
